--- a/devspace.yaml
+++ b/devspace.yaml
@@ -1,6 +1,5 @@
 version: v1beta10
 
-# `vars` specifies variables which may be used as ${VAR_NAME} in devspace.yaml
 vars:
   - name: APP_IMAGE
     question: Which image repository should your image be pushed to? (e.g. dockerhubuser/image, gcr.io/project/image)
@@ -18,7 +17,10 @@ vars:
     source: command
     command: kubectl
     args: ["get", "configmap", "nginx-config", "--ignore-not-found", "-o", "jsonpath={.metadata.resourceVersion}"]
-# `deployments` tells DevSpace how to deploy this project
+images:
+  app:
+    image: ${APP_IMAGE}
+    dockerfile: ./Dockerfile
 deployments:
   - name: mysql
     helm:
@@ -145,24 +147,18 @@ deployments:
         password: $!{REDIS_PASSWORD}
         cluster:
           enabled: false
-# `dev` only applies when you run `devspace dev`
 dev:
-  # `dev.ports` specifies all ports that should be forwarded while `devspace dev` is running
-  # Port-forwarding lets you access your application via localhost on your local machine
   ports:
-    - imageSelector: ${APP_IMAGE} # Select the Pod that runs our `${IMAGE}`
+    - imageSelector: ${APP_IMAGE}
       forward:
         - port: 8080
           remotePort: 80
 
-  # `dev.open` tells DevSpace to open certain URLs as soon as they return HTTP status 200
-  # Since we configured port-forwarding, we can use a localhost address here to access our application
   open:
     - url: http://localhost:8080
 
-  # `dev.sync` configures a file sync between our Pods in k8s and your local project files
   sync:
-    - imageSelector: ${APP_IMAGE} # Select the Pod that runs our `${IMAGE}`
+    - imageSelector: ${APP_IMAGE}
       excludePaths:
         - .git/
         - .git/
@@ -177,58 +173,26 @@ dev:
         - vendor/
         - node_modules/
       onUpload:
-        restartContainer: true
         execRemote:
           onBatch:
             command: sh
             args: ["-c", "cp -r /var/www/html/public/* /assets/"]
   logs:
-    images:
-      - nginx:${NGINX_IMAGE_VERSION}
+    selectors:
+      - containerName: nginx
+        labelSelector:
+          app.kubernetes.io/component: app
   autoReload:
     paths:
       - Dockerfile
       - deploy/nginx-config-configmap.yaml
-  # `dev.terminal` tells DevSpace to open a terminal as a last step during `devspace dev`
-  terminal:
-    imageSelector: ${APP_IMAGE} # Select the Pod that runs our `${IMAGE}`
-    # With this optional `command` we can tell DevSpace to run a script when opening the terminal
-    # This is often useful to display help info for new users or perform initial tasks (e.g. installing dependencies)
-    # DevSpace has generated an example ./devspace_start.sh file in your local project - Feel free to customize it!
-    command:
-      - ./devspace_start.sh
 
-  # Since our Helm charts and manifests deployments are often optimized for production,
-  # DevSpace let's you swap out Pods dynamically to get a better dev environment
-  replacePods:
-    - imageSelector: ${APP_IMAGE} # Select the Pod that runs our `${IMAGE}`
-      # Since the `${IMAGE}` used to start our main application pod may be distroless or not have any dev tooling, let's replace it with a dev-optimized image
-      # DevSpace provides a sample image here but you can use any image for your specific needs
-      replaceImage: loftsh/php:7.3-fpm
-      # Besides replacing the container image, let's also apply some patches to the `spec` of our Pod
-      # We are overwriting `command` + `args` for the first container in our selected Pod, so it starts with `sleep 9999999`
-      # Using `sleep 9999999` as PID 1 (instead of the regular ENTRYPOINT), allows you to start the application manually
-      patches:
-        - op: remove
-          path: spec.containers[0].securityContext
-  logs:
-    images:
-      - nginx:${NGINX_IMAGE_VERSION}
-# `profiles` lets you modify the config above for different environments (e.g. dev vs production)
 profiles:
-  # This profile is called `production` and you can use it for example using: devspace deploy -p production
-  # We generally recommend to use the base config without any profiles as optimized for development (e.g. image build+push is disabled)
-  - name: development
-    # This profile adds our image to the config so that DevSpace will build, tag and push our image before the deployment
-    merge:
-      images:
-        app:
-          image: ${APP_IMAGE} # Use the value of our `${IMAGE}` variable here (see vars above)
-          dockerfile: ./Dockerfile
-#          build:
-#            docker:
-#              args:
-#                - "--no-cache"
+  - name: production
+    patches:
+      - op: remove
+        path: hooks
+
 commands:
   - name: artisan
     description: Entry point for artisan commands.
@@ -248,6 +212,7 @@ commands:
   - name: mysql
     description: Enter to MySQL shell.
     command: devspace enter -c mysql -- mysql -h'${DB_HOST}' -P'${DB_PORT}' -u'${DB_USERNAME}' -p'${DB_PASSWORD}' '${DB_DATABASE}'
+
 hooks:
   - command: sh
     args:
